<resources>
    <string name="app_name">DroneTesting</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="pref_connection_type">Telemetry Connection Type</string>
    <string name="pref_connection_type_summary">Which link to use to connect to the drone</string>
    <string name="pref_baud_type">Telemetry link speed</string>
    <string name="pref_baud_type_summary">Baud Rate of the USB Telemetry Link</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_connect">Connect</string>
    <string name="mission_control_arm">Arm</string>
    <string name="mission_control_dronie">Dronie</string>
    <string name="mission_control_disarm">Disarm</string>
    <string name="mission_control_takeoff">Takeoff</string>
    <string name="mission_control_auto">Auto</string>
    <string name="mission_control_home">Home</string>
    <string name="mission_control_land">Land</string>
    <string name="mission_control_pause">Pause</string>
    <string name="mission_control_follow">Follow</string>
</resources>
