<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/mc_disconnected_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_gravity="center_horizontal"
        >

        <Button
            android:id="@+id/mc_connectBtn"
            android:text="@string/menu_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/mc_disarmed_buttons"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mc_armBtn"
                android:text="@string/mission_control_arm"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <Button
                android:id="@+id/mc_dronieBtn"
                android:text="@string/mission_control_dronie"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/mc_armed_buttons"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/mc_disarmBtn"
                android:text="@string/mission_control_disarm"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <Button
                android:id="@+id/mc_takeoff"
                android:text="@string/mission_control_takeoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/mc_TakeoffInAutoBtn"
                android:text="@string/mission_control_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="20sp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/mc_in_flight_buttons"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mc_homeBtn"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mission_control_home"/>

            <Button
                android:id="@+id/mc_land"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/mission_control_land"
                android:layout_weight="1"
                tools:ignore="ContentDescription"/>

            <Button
                android:id="@+id/mc_pause"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/mission_control_pause"
                android:layout_weight="1"
                tools:ignore="ContentDescription"/>

            <Button
                android:id="@+id/mc_autoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mission_control_auto"
                tools:ignore="ContentDescription"/>

            <Button
                android:id="@+id/mc_follow"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/mission_control_follow"
                android:layout_weight="1"
                tools:ignore="ContentDescription"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>